--- a/style.css
+++ b/style.css
@@ -100,6 +100,12 @@ option {
     border-radius: 10px;
 }
 
+#Check {
+    width: 100px;
+    height: 45px;
+    border-radius: 10px;
+}
+
 #AddBread:hover {
     background-color: limegreen;
     border-radius: 15px;
